fixed device width and z-index

--- a/css/layout.css
+++ b/css/layout.css
@@ -32,7 +32,7 @@
   flex-direction: column;
 }
 
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 667px) {
   .mediaview {
     flex-direction: row;
     flex-wrap: wrap;
